--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 $brand-color: #26547C;
-$secondary-brand-color: #DB5A42;
+$secondary-brand-color: #26547C;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
