--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		{% feed_meta %}
 
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.ico">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key and site.google_analytics_key != '' %}
 			<script>
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/ordinarysolutions-logo-horizontal.png" alt="Ordinary Solutions" width="95" height="33" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo-ordinarysolutions-horizontal-white.png" alt="Ordinary Solutions" width="120" height="33" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
